fixing footer contrast issue

--- a/www/stylesheets/css/discovery.css
+++ b/www/stylesheets/css/discovery.css
@@ -8,7 +8,7 @@
 }
 
 .frdr-jumbo-footer a:hover {
-  color: #2191C5;
+  color: white;
 }
 
 .frdr-jumbo-footer a {
